# test_

./: setup.cfg
src/k.egg-info/: PKG-INFO  SOURCES.txt
