[metadata]
name = k
version = 0.0.1
author = k
author_email = k
description = Provides a basic package structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Souvic/test_.git
project_urls =
    Bug Tracker = https://github.com/Souvic/test_.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
	
	
[options.packages.find]
where = src

